--- a/VsmdWorkstation/html/boardSetting.html
+++ b/VsmdWorkstation/html/boardSetting.html
@@ -12,15 +12,37 @@
     <link rel="stylesheet" type="text/css" href="css/tubeGrid.css">
 </head>
 <body>
-    <div id="actions">
-        <div style="margin-bottom: 10px;">
-            <button id="setFirstTubePos" class="btn btn-default">设置第一个孔坐标</button>
-            <button id="setTubeDistance" class="btn btn-default">设置孔间距</button>
-        </div>
+    <div id="container">
+        <div id="actions">
+            <form>
+                <div class="form-group row">
+                    <label for="boardName" class="col-sm-2 col-form-label">载物架名称:</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" id="boardName" placeholder="请输入载物架名称">
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label for="spec" class="col-sm-2 col-form-label">规格</label>
+                    <div class="col-sm-10">
+                        <input class=" col-sm-1" type="text" id="spec" placeholder="1">
+                        <label class=" col-sm-1">组</label>
+                        <input class=" col-sm-1" type="text" >
+                        <label class=" col-sm-1">行</label>
+                        <input class=" col-sm-1" type="text"  >
+                        <label class=" col-sm-1">列</label>
+                    </div>
+                </div>
+            </form>
+            <div style="margin-bottom: 10px;">
+                <button id="setFirstTubePos" class="btn btn-default">设置第一个孔坐标</button>
+                <button id="setTubeDistance" class="btn btn-default">设置孔间距</button>
+            </div>
 
-        <label id="tips"></label>
+            <label id="tips"></label>
+        </div>
+        <div id="tubesContainer"></div>
     </div>
-    <div id="tubesContainer"></div>
+
 
 </body>
 
