--- a/VsmdWorkstation/html/main.html
+++ b/VsmdWorkstation/html/main.html
@@ -16,7 +16,9 @@
 <body>
     <div id="tubesContainer"></div>
     <div>
-        <button id="move" class="btn btn-primary">Move</button>
+        <button id="move" class="btn btn-default">移动</button>
+        <button id="stop" class="btn btn-default">停止</button>
+        <button id="reset" class="btn btn-default">重置面板</button>
     </div>
 
 </body>
