--- a/VsmdWorkstation/html/boardSetting.html
+++ b/VsmdWorkstation/html/boardSetting.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="css/jquery-ui.structure.css">
     <link rel="stylesheet" type="text/css" href="css/jquery-ui.theme.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/commonStyle.css">
     <link rel="stylesheet" type="text/css" href="css/tubeGrid.css">
 </head>
 <body>
