--- a/VsmdWorkstation/html/vsmdSetting.html
+++ b/VsmdWorkstation/html/vsmdSetting.html
@@ -15,7 +15,7 @@
     <div id="basicInfo" class="container marginTop10px">
         <form role="form">
             <div class="form-group row">
-                <label class="col-sm-1 control-label rightAlignText marginTop10px">Port:</label>
+                <label class="col-sm-1 control-label rightAlignText marginTop10px" style="padding: 0;">Port:</label>
                 <div class="col-sm-3">
                     <select class="form-control">
                         <option value="COM3">COM3</option>
@@ -23,7 +23,7 @@
                 </div>
             </div>
             <div class="form-group row">
-                <label class="col-sm-1 control-label rightAlignText marginTop10px">Baudrate:</label>
+                <label class="col-sm-1 control-label rightAlignText marginTop10px" style="padding: 0;">Baudrate:</label>
                 <div class="col-sm-3">
                     <select class="form-control" id="baudrate">
                         <option value="2400">2400</option>
