--- a/VsmdWorkstation/html/tubeGrid.html
+++ b/VsmdWorkstation/html/tubeGrid.html
@@ -21,7 +21,7 @@
     <script src="js/jquery-ui.js"></script>
 
     <script src="js/contextMenu.js"></script>
-    <script src="js/box-selection.js"></script>
+    <!--<script src="js/box-selection.js"></script>-->
     <script src="js/tubeGrid.js"></script>
     <script src="js/page.js"></script>
 </html>
