--- a/VsmdWorkstation/html/tubeGrid.html
+++ b/VsmdWorkstation/html/tubeGrid.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <title>Title</title>
 
     <link rel="stylesheet" type="text/css" href="css/jquery-ui.css">
